// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./docs/.vuepress/components/demo/alert/arrow.vue correctly 1`] = `
<section class="box">
  <div class="top">
    <div class="nova-alert nova-alert-success nova-alert-placement-top-start nova-alert-border nova-alert-has-arrow">
      <div class="nova-alert-icon nova-alert-icon-success"></div>
      <!----> <span>上左</span>
      <div class="nova-alert-arrow"></div>
    </div>
    <div class="nova-alert nova-alert-success nova-alert-placement-top nova-alert-border nova-alert-has-arrow">
      <div class="nova-alert-icon nova-alert-icon-success"></div>
      <!----> <span>上</span>
      <div class="nova-alert-arrow"></div>
    </div>
    <div class="nova-alert nova-alert-success nova-alert-placement-top-end nova-alert-border nova-alert-has-arrow">
      <div class="nova-alert-icon nova-alert-icon-success"></div>
      <!----> <span>上右</span>
      <div class="nova-alert-arrow"></div>
    </div>
  </div>
  <div class="left">
    <div class="nova-alert nova-alert-success nova-alert-placement-left-start nova-alert-border nova-alert-has-arrow">
      <div class="nova-alert-icon nova-alert-icon-success"></div>
      <!----> <span>左<br>上</span>
      <div class="nova-alert-arrow"></div>
    </div>
    <div class="nova-alert nova-alert-success nova-alert-placement-left nova-alert-border nova-alert-has-arrow">
      <div class="nova-alert-icon nova-alert-icon-success"></div>
      <!----> <span>左</span>
      <div class="nova-alert-arrow"></div>
    </div>
    <div class="nova-alert nova-alert-success nova-alert-placement-left-end nova-alert-border nova-alert-has-arrow">
      <div class="nova-alert-icon nova-alert-icon-success"></div>
      <!----> <span>左<br>下</span>
      <div class="nova-alert-arrow"></div>
    </div>
  </div>
  <div class="right">
    <div class="nova-alert nova-alert-success nova-alert-placement-right-start nova-alert-border nova-alert-has-arrow">
      <div class="nova-alert-icon nova-alert-icon-success"></div>
      <!----> <span>右<br>上</span>
      <div class="nova-alert-arrow"></div>
    </div>
    <div class="nova-alert nova-alert-success nova-alert-placement-right nova-alert-border nova-alert-has-arrow">
      <div class="nova-alert-icon nova-alert-icon-success"></div>
      <!----> <span>右</span>
      <div class="nova-alert-arrow"></div>
    </div>
    <div class="nova-alert nova-alert-success nova-alert-placement-right-end nova-alert-border nova-alert-has-arrow">
      <div class="nova-alert-icon nova-alert-icon-success"></div>
      <!----> <span>右<br>下</span>
      <div class="nova-alert-arrow"></div>
    </div>
  </div>
  <div class="bottom">
    <div class="nova-alert nova-alert-success nova-alert-placement-bottom-start nova-alert-border nova-alert-has-arrow">
      <div class="nova-alert-icon nova-alert-icon-success"></div>
      <!----> <span>下左</span>
      <div class="nova-alert-arrow"></div>
    </div>
    <div class="nova-alert nova-alert-success nova-alert-placement-bottom nova-alert-border nova-alert-has-arrow">
      <div class="nova-alert-icon nova-alert-icon-success"></div>
      <!----> <span>下</span>
      <div class="nova-alert-arrow"></div>
    </div>
    <div class="nova-alert nova-alert-success nova-alert-placement-bottom-end nova-alert-border nova-alert-has-arrow">
      <div class="nova-alert-icon nova-alert-icon-success"></div>
      <!----> <span>下右</span>
      <div class="nova-alert-arrow"></div>
    </div>
  </div>
</section>
`;

exports[`renders ./docs/.vuepress/components/demo/alert/basic.vue correctly 1`] = `
<div class="nova-alert nova-alert-success nova-alert-placement-bottom nova-alert-border nova-alert-block">
  <div class="nova-alert-icon nova-alert-icon-success"></div>
  <!----> Success Text
  <!---->
</div>
`;

exports[`renders ./docs/.vuepress/components/demo/alert/block.vue correctly 1`] = `
<section>
  <div class="nova-alert nova-alert-success nova-alert-placement-bottom nova-alert-border">
    <div class="nova-alert-icon nova-alert-icon-success"></div>
    <!----> Success Text
    <!---->
  </div>
  <div class="nova-alert nova-alert-info nova-alert-placement-bottom nova-alert-border">
    <div class="nova-alert-icon nova-alert-icon-info"></div>
    <!----> Info Text
    <!---->
  </div>
  <div class="nova-alert nova-alert-help nova-alert-placement-bottom nova-alert-border">
    <div class="nova-alert-icon nova-alert-icon-help"></div>
    <!----> Help Text
    <!---->
  </div>
  <div class="nova-alert nova-alert-warning nova-alert-placement-bottom nova-alert-border">
    <div class="nova-alert-icon nova-alert-icon-warning"></div>
    <!----> Warning Text
    <!---->
  </div>
  <div class="nova-alert nova-alert-error nova-alert-placement-bottom nova-alert-border">
    <div class="nova-alert-icon nova-alert-icon-error"></div>
    <!----> Error Text
    <!---->
  </div>
</section>
`;

exports[`renders ./docs/.vuepress/components/demo/alert/border.vue correctly 1`] = `
<section>
  <div class="nova-alert nova-alert-success nova-alert-placement-bottom nova-alert-block">
    <div class="nova-alert-icon nova-alert-icon-success"></div>
    <!----> Success Text
    <!---->
  </div>
  <div class="nova-alert nova-alert-info nova-alert-placement-bottom nova-alert-block">
    <div class="nova-alert-icon nova-alert-icon-info"></div>
    <!----> Info Text
    <!---->
  </div>
  <div class="nova-alert nova-alert-help nova-alert-placement-bottom nova-alert-block">
    <div class="nova-alert-icon nova-alert-icon-help"></div>
    <!----> Help Text
    <!---->
  </div>
  <div class="nova-alert nova-alert-warning nova-alert-placement-bottom nova-alert-block">
    <div class="nova-alert-icon nova-alert-icon-warning"></div>
    <!----> Warning Text
    <!---->
  </div>
  <div class="nova-alert nova-alert-error nova-alert-placement-bottom nova-alert-block">
    <div class="nova-alert-icon nova-alert-icon-error"></div>
    <!----> Error Text
    <!---->
  </div>
</section>
`;

exports[`renders ./docs/.vuepress/components/demo/alert/closable.vue correctly 1`] = `
<section>
  <div class="nova-alert nova-alert-warning nova-alert-placement-bottom nova-alert-border nova-alert-block nova-alert-closable">
    <div class="nova-alert-icon nova-alert-icon-warning"></div>
    <div class="nova-alert-close">
      <div class="nova-alert-close-icon"></div>
    </div> Warning Text Warning Text Warning Text Warning Text Warning Text Warning
    TextWarning Text
    <!---->
  </div>
  <div class="nova-alert nova-alert-error nova-alert-placement-bottom nova-alert-border nova-alert-block nova-alert-closable">
    <div class="nova-alert-icon nova-alert-icon-error"></div>
    <div class="nova-alert-close">
      <div class="nova-alert-close-icon"></div>
    </div> Error Description Error Description Error Description Error Description
    Error Description Error Description
    <!---->
  </div>
</section>
`;

exports[`renders ./docs/.vuepress/components/demo/alert/style.vue correctly 1`] = `
<section>
  <div class="nova-alert nova-alert-success nova-alert-placement-bottom nova-alert-border nova-alert-block">
    <div class="nova-alert-icon nova-alert-icon-success"></div>
    <!----> Success Text
    <!---->
  </div>
  <div class="nova-alert nova-alert-info nova-alert-placement-bottom nova-alert-border nova-alert-block">
    <div class="nova-alert-icon nova-alert-icon-info"></div>
    <!----> Info Text
    <!---->
  </div>
  <div class="nova-alert nova-alert-help nova-alert-placement-bottom nova-alert-border nova-alert-block">
    <div class="nova-alert-icon nova-alert-icon-help"></div>
    <!----> Help Text
    <!---->
  </div>
  <div class="nova-alert nova-alert-warning nova-alert-placement-bottom nova-alert-border nova-alert-block">
    <div class="nova-alert-icon nova-alert-icon-warning"></div>
    <!----> Warning Text
    <!---->
  </div>
  <div class="nova-alert nova-alert-error nova-alert-placement-bottom nova-alert-border nova-alert-block">
    <div class="nova-alert-icon nova-alert-icon-error"></div>
    <!----> Error Text
    <!---->
  </div>
</section>
`;
